# electronics_drone

./: LICENSE
MPU_Only/: MPU6050_Only.ino
display/: orientation_display.py  pid_visual.py
drone_control/: drone_control.ino
gloves/: gloves.ino
licenses/: CRC32_license.txt  MIN_license.txt  ardupid_license.txt
rust_infra/: Cargo.toml
rust_infra/src/: data.rs  lib.rs  min.rs
